unpackaged/main/default/objects/T1_Direct_Opp__c/T1_Direct_Opp__c.object-meta.xml
<CustomObject>
    <description>For T1 Direct Team</description>
    <label>T1 Direct Opp</label>
    <nameField>
        <displayFormat>T1D-{0000000}</displayFormat>
        <label>T1 Direct Opps No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>T1 Direct Opps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>